--- a/2_faq-accordion/assets/css/style.css
+++ b/2_faq-accordion/assets/css/style.css
@@ -100,6 +100,7 @@ body {
   align-items: center;
   font-size: 15px;
   font-weight: 700;
+  color: #4c454f;
   line-height: 1.1;
   letter-spacing: 0.5px;
   gap: 32px;
